--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "db:seed": "npx ts-node seed.ts"
   },
   "prisma": {
-    "seed": "npm run db:seed"
+    "seed": "npm run db:seed",
+    "schema": "./prisma"
   },
   "keywords": [],
   "author": "",
@@ -33,8 +34,11 @@
     "cors": "^2.8.5",
     "date-fns": "^4.1.0",
     "dotenv": "^16.4.7",
+    "exceljs": "^4.4.0",
     "express": "^4.21.2",
     "express-async-handler": "^1.2.0",
+    "express-rate-limit": "^8.0.1",
+    "express-rate-limiter": "^1.3.1",
     "express-validator": "^7.2.1",
     "helmet": "^8.0.0",
     "jsonwebtoken": "^9.0.2",
